[gd_scene load_steps=13 format=2]

[ext_resource path="res://BattleGround.gd" type="Script" id=1]
[ext_resource path="res://image/icon.png" type="Texture" id=2]
[ext_resource path="res://Shake.gd" type="Script" id=3]
[ext_resource path="res://CharaBtl.gd" type="Script" id=4]
[ext_resource path="res://Hands.gd" type="Script" id=5]
[ext_resource path="res://battle.gd" type="Script" id=6]
[ext_resource path="res://CharaInfoRT.gd" type="Script" id=7]
[ext_resource path="res://NoTargetCast.gd" type="Script" id=8]
[ext_resource path="res://image/shoulder2.png" type="Texture" id=9]
[ext_resource path="res://image/bg.tres" type="Texture" id=10]
[ext_resource path="res://TestPanel.gd" type="Script" id=11]
[ext_resource path="res://Menu.gd" type="Script" id=12]

[node name="battle" type="Node"]
script = ExtResource( 6 )

[node name="BG" type="CanvasLayer" parent="."]
layer = -2

[node name="BG" type="TextureRect" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 10 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoulder" type="TextureRect" parent="BG/BG"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -521.0
margin_right = 854.0
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
mouse_filter = 2
alignment = 2
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="Button" parent="UI/Menu"]
margin_left = 980.0
margin_right = 1024.0
margin_bottom = 20.0
text = "Deck"

[node name="Hands" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
deck_position_node = NodePath("icon")

[node name="icon" type="Sprite" parent="UI/Hands"]
position = Vector2( -435.599, -81.774 )
texture = ExtResource( 2 )

[node name="deckCount" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 59.6403
margin_top = -97.8546
margin_right = 94.6403
margin_bottom = -63.8546
text = "AAA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discardCount" type="Label" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -211.879
margin_top = -169.573
margin_right = -163.879
margin_bottom = -133.573
text = "BBB"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -219.575
margin_top = -116.931
margin_right = -152.575
margin_bottom = -96.9308
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestPanel" type="VBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -71.0
margin_top = -22.0
margin_bottom = 22.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestDraw" type="Button" parent="UI/TestPanel"]
margin_right = 71.0
margin_bottom = 20.0
text = "TestDraw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestWin" type="Button" parent="UI/TestPanel"]
margin_top = 24.0
margin_right = 71.0
margin_bottom = 44.0
text = "TestWin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Node2D" parent="."]
position = Vector2( -417.383, -199.102 )
script = ExtResource( 4 )

[node name="Chara" type="Sprite" parent="Player"]
texture = ExtResource( 2 )

[node name="Info" type="RichTextLabel" parent="Player"]
margin_left = -63.4073
margin_top = 49.9594
margin_right = 208.593
margin_bottom = 178.959
scroll_active = false
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleGround" type="Node2D" parent="."]
position = Vector2( 0, 79 )
script = ExtResource( 1 )

[node name="NoTargetCast" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -297.0
margin_top = -138.0
margin_right = 297.0
margin_bottom = 138.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Shake" type="Tween" parent="Camera2D"]
script = ExtResource( 3 )
[connection signal="pressed" from="UI/Menu/Deck" to="UI/Menu" method="_on_Deck_pressed"]
[connection signal="pressed" from="UI/EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="UI/TestPanel/TestDraw" to="UI/TestPanel" method="_on_TestDraw_pressed"]
[connection signal="pressed" from="UI/TestPanel/TestWin" to="UI/TestPanel" method="_on_TestWin_pressed"]
[connection signal="discard" from="Player" to="." method="_on_Player_discard"]
[connection signal="draw_card" from="Player" to="." method="_on_Player_draw_card"]
[connection signal="exhaust" from="Player" to="." method="_on_Player_exhaust"]
[connection signal="hurt" from="Player" to="." method="_on_Player_hurt"]
[connection signal="play" from="Player" to="." method="_on_Player_play"]
[connection signal="refresh_card" from="Player" to="." method="_on_Player_refresh_card"]
